--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ env:
   HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
   HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
+  DBCONNECTION: ${{ secrets.DBCONNECTION }}
 
 jobs:
   build:
