--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
   APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
   HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
   DBCONNECTION: ${{ secrets.DBCONNECTION }}
-
+  
 jobs:
   build:
     runs-on: ubuntu-18.04
@@ -20,12 +20,13 @@ jobs:
     # Check-out the repository
     - name: Checkout
       uses: actions/checkout@v2
-
+      
 
 ### ⬇ IMPORTANT PART ⬇ ###
 
     - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
       uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
+     
       with:
         # Below you must provide variables for your Heroku app.
 
@@ -49,7 +50,7 @@ jobs:
         # (Optional, default: "Dockerfile")
         # Dockerfile name.
         dockerfile_name: Dockerfile
-
+        args: ${{ secrets.DBCONNECTION }}
         # (Optional, default: "")
         # Additional options of docker build command.
         docker_options: "--no-cache"
