--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,48 +17,59 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-    # Check-out the repository
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Build and deploy the Docker image
+      run: |
+          docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
+          docker build --build-arg DBCONNECTION_ARG=${{ env.DBCONNECTION }}L -t registry.heroku.com/${{ env.APP_NAME }}/web .
+          docker push registry.heroku.com/${{ env.APP_NAME }}/web
+
+    
+# jobs:
+#   build:
+#     runs-on: ubuntu-18.04
+#     steps:
+#     # Check-out the repository
+#     - name: Checkout
+#       uses: actions/checkout@v2
       
 
-### ⬇ IMPORTANT PART ⬇ ###
+# ### ⬇ IMPORTANT PART ⬇ ###
 
-    - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-      uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
-     
-      with:
-        # Below you must provide variables for your Heroku app.
+#     - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
+#       uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
+   
+#       with:
+#         # Below you must provide variables for your Heroku app.
 
-        # The email address associated with your Heroku account.
-        # If you don't want to use repository secrets (which is recommended) you can do:
-        # email: my.email@example.com
-        email: ${{ secrets.HEROKU_EMAIL }}
+#         # The email address associated with your Heroku account.
+#         # If you don't want to use repository secrets (which is recommended) you can do:
+#         # email: my.email@example.com
+#         email: ${{ secrets.HEROKU_EMAIL }}
 
-        # Heroku API key associated with provided user's email.
-        # Api Key is available under your Heroku account settings.
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+#         # Heroku API key associated with provided user's email.
+#         # Api Key is available under your Heroku account settings.
+#         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
 
-        # Name of the heroku application to which the build is to be sent.
-        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+#         # Name of the heroku application to which the build is to be sent.
+#         heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
 
-        # (Optional, default: "./")
-        # Dockerfile directory.
-        # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-        dockerfile_directory: score_system/
+#         # (Optional, default: "./")
+#         # Dockerfile directory.
+#         # For example, if you have a Dockerfile in the root of your project, leave it as follows:
+#         dockerfile_directory: score_system/
 
-        # (Optional, default: "Dockerfile")
-        # Dockerfile name.
-        dockerfile_name: Dockerfile
-        args: ${{ secrets.DBCONNECTION }}
-        # (Optional, default: "")
-        # Additional options of docker build command.
-        docker_options: "--no-cache"
+#         # (Optional, default: "Dockerfile")
+#         # Dockerfile name.
+#         dockerfile_name: Dockerfile
+        
+#         # (Optional, default: "")
+#         # Additional options of docker build command.
+#         docker_options: "--no-cache"
 
-        # (Optional, default: "web")
-        # Select the process type for which you want the docker container to be uploaded.
-        # By default, this argument is set to "web".
-        # For more information look at https://devcenter.heroku.com/articles/process-model
-        process_type: web
+#         # (Optional, default: "web")
+#         # Select the process type for which you want the docker container to be uploaded.
+#         # By default, this argument is set to "web".
+#         # For more information look at https://devcenter.heroku.com/articles/process-model
+#         process_type: web
                   
-### ⬆ IMPORTANT PART ⬆ ###
+# ### ⬆ IMPORTANT PART ⬆ ###
