--- a/score_system/Dockerfile
+++ b/score_system/Dockerfile
@@ -2,7 +2,8 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
-ARG DBCONNECTION
+ARG DBCONNECTION_ARG
+ENV DBCONNECTION=$DBCONNECTION_ARG
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["score_system.csproj", "./"]
