--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,9 @@ jobs:
     - name: Build and deploy the Docker image
       run: |
           docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
-          docker build --build-arg DBCONNECTION_ARG=${{ env.DBCONNECTION }}L -t registry.heroku.com/${{ env.APP_NAME }}/web .
+          docker build --build-arg DBCONNECTION_ARG=${{ env.DBCONNECTION }} -t registry.heroku.com/${{ env.APP_NAME }}/web .
           docker push registry.heroku.com/${{ env.APP_NAME }}/web
+          heroku container:release web
 
     
 # jobs:
