--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,10 @@ jobs:
       run: |
           export DATABASE_URL=${{ env.DBCONNECTION }}
           docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
-          docker build --build-arg DBCONNECTION_ARG="$DATABASE_URL" -t registry.heroku.com/${{ env.APP_NAME }}/web -f .
+          docker build --build-arg DBCONNECTION_ARG="$DATABASE_URL" -t ${{ env.APP_NAME }} .
+          docker tag ${{ env.APP_NAME }} registry.heroku.com/${{ env.APP_NAME }}/web
           docker push registry.heroku.com/${{ env.APP_NAME }}/web
-          heroku container:release web
+          heroku container:release web -a ${{ env.APP_NAME }}
 
     
 # jobs:
