--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
           export DATABASE_URL=${{ env.DBCONNECTION }}
           docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
-          docker build --build-arg DBCONNECTION_ARG="$DATABASE_URL" -t score_system .
+          docker build --build-arg DBCONNECTION_ARG="$DATABASE_URL" -t score_system score_system/
           docker tag score_system registry.heroku.com/${{ env.APP_NAME }}/web
           docker push registry.heroku.com/${{ env.APP_NAME }}/web
           heroku container:release web -a ${{ env.APP_NAME }}
